# seedloop

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  api.md  decisions.md  glossary.md  internals.md  network.md  scope.md  testing.md
scripts/: mutation_baseline.txt  mutation_sweep.py  pin_replay.py  release_guard.py
src/seedloop/: __init__.py  _audit.py  _entropy.py  _loop.py  _net.py  _run.py  _trace.py  _world.py  errors.py  hypothesis.py
src/seedloop/demos/: __init__.py  raft.py
tests/: test_audit.py  test_check_sweep.py  test_clock_autojump.py  test_entropy.py  test_errors.py  test_faults.py  test_hypothesis.py  test_invariants.py  test_loop_boundary.py  test_loop_integration.py  test_loop_order.py  test_raft_demo.py  test_release_guard.py  test_replay_equivalence.py  test_replay_stability.py  test_smoke.py  test_timer_order.py  test_trace.py  test_transport.py
tests/data/: replay_golden.txt
