[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "seedloop"
description = "Deterministic simulation testing for Python asyncio."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vojtěch Klíma", email = "vojtechklima02@gmail.com" }]
keywords = ["asyncio", "testing", "determinism", "simulation", "concurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/klimavojtech2002/seedloop"
Repository = "https://github.com/klimavojtech2002/seedloop"
Issues = "https://github.com/klimavojtech2002/seedloop/issues"
Changelog = "https://github.com/klimavojtech2002/seedloop/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8", "pytest-timeout>=2"]
# The mutation gate (scripts/mutation_sweep.py) rewrites the AST with libcst; CI-only, not runtime.
mutation = ["libcst>=1.4"]

[tool.setuptools.dynamic]
version = { attr = "seedloop.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
# scripts/ is dev tooling (the mutation harness needs libcst, a CI-only extra), so `mypy .` on the
# gates job does not require it; the mutation job type-checks the harness explicitly where libcst is
# installed.
exclude = ['(^|/)(\.venv|build|dist|\.eggs|scripts)/']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# A simulated run can livelock on a loop bug; cap every test so a hang fails fast instead of
# blocking CI. The suite otherwise runs in virtual time and finishes in milliseconds.
timeout = 30
